<resources>
    <string name="app_name">EcoamigoSevilla</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarme">Registrarme</string>
    <string name="registro">Registro</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nicoR">Correo Electrónico</string>
    <string name="contrase_aR">Contraseña</string>
    <string name="confirmaci_n_de_contrase_a">Confirmación de Contraseña</string>
    <string name="registrarte">Registrarte</string>
    <string name="sevilla_valle_es_un_pueblo_hermoso_y_nuestro_deber_es_mantenerlo_reluciente_tanto_para_los_habitantes_como_para_los_turistas_hagamos_de_sevilla_un_pueblo_mejor">Sevilla Valle es un pueblo hermoso, y nuestro deber es mantenerlo reluciente tanto para los habitantes como para los turistas; Hagamos de Sevilla un pueblo mejor.</string>
    <string name="sevilla">sevilla</string>
    <string name="boton_perfil_de_inicio">Boton Perfil de Inicio</string>
    <string name="boton_menu_inicio">Boton Menu Inicio</string>
    <string name="men">Menú</string>
    <string name="inicio">INICIO</string>
    <string name="horario">HORARIO</string>
    <string name="tips">TIPS</string>
    <string name="reciclaje">RECICLAJE</string>
    <string name="mis_metas">MIS METAS</string>
    <string name="perfil">PERFIL</string>
    <string name="comunidad">COMUNIDAD</string>
    <string name="perfilM">PERFIL</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="perfilP">Perfil</string>
    <string name="cuenta">Cuenta</string>
    <string name="privacidad">Privacidad</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="ajustes">Ajustes</string>
    <string name="destacados">Destacados</string>
    <string name="chats">Chats</string>
    <string name="bienvenido_a_ecoamigosevilla">Bienvenido a EcoamigoSevilla</string>
    <string name="pulsa_para_iniciar">Pulsa para Iniciar</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
</resources>