<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4FDE7"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#00CC8B"
        android:fontFamily="sans-serif-black"
        android:padding="14dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:padding="14dp"
        android:text="@string/inicio_de_sesi_n"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"/>

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="430dp"
        android:background="#00CC8B"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            android:textColorHint="@color/black"
            app:counterOverflowTextColor="@color/black"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/correoInicio"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:hint="@string/correo_electr_nico"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView2"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:cursorColor="@color/black"
            android:textColorHint="@color/black"
            app:counterOverflowTextColor="@color/black"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/contrasenaInicio"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/correoInicio"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#00402B"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="@string/ingresar"
            android:textColor="#FFF"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/irRegister"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/registrarme"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>
</RelativeLayout>